# gpt-container

./: Dockerfile  README.md  compose.yaml  pyproject.toml
src/: download.py
src/gpt_container/: dash_main.py  generator.py  streamlit.py
tests/: test_gpt_container.py
